Correct linter errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,8 @@
         "es2020": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "standard"
+        "eslint:recommended",
+        "plugin:react/recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
