--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "eslint": "^7.5.0",
+    "eslint": "6.6.0",
     "eslint-plugin-react": "^7.20.3",
     "express": "^4.17.1",
     "react": "^16.13.1",
