--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "6.6.0",
     "eslint-plugin-react": "^7.20.3",
     "express": "^4.17.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
